Refactor CustomizationContext
Now we only have one public constructor with all three fields.
Also, the collections are now un-modifiable to prevent
difficult-to-maintain behaviour.

#Refs: #92